# MedError

./: .gitignore  LICENSE  README.md  environment.yml  index.html  pnpm-lock.yaml  pyproject.toml  vite.config.ts
.github/workflows/: deploy.yml
Taxonomy/: error_taxonomy_v2_1.md
error-analysis-web-app-source/: MedError.html  index.html  package-lock.json  package.json  vite.config.ts
error-analysis-web-app-source/input_example/: annotation_guideline.yaml  error_definition.yaml  error_labels.json  input_short.json
error-analysis-web-app-source/src/: App.vue  main.ts
error-analysis-web-app-source/src/components/: AnalysisSummary.vue  AnnotationGuidelineUploader.vue  AnnotationGuidelineView.vue  DetailedAnalysis.vue  ErrorVisualization.vue  JsonUploader.vue  LlmConfig.vue  MultiSiteComparison.vue  StudyConfig.vue  TaxonomyView.vue  YamlUploader.vue
error-analysis-web-app-source/src/services/: llmService.ts
error-analysis-web-app-source/src/stores/: annotationGuideline.ts  jsonData.ts  llmConfig.ts  studyConfig.ts  yamlData.ts
input_example/: error_labels.json
sample_data/: error_input_examples.csv  error_input_examples.json
src/: App.vue
src/components/: AnalysisSummary.vue  DetailedAnalysis.vue  DisplayYamlUploader.vue  YamlUploader.vue
src/mederror/: __init__.py  eval.py  postprocess.py  prompt.py
src/stores/: displayYamlData.ts  jsonData.ts  yamlData.ts
