[build-system]
requires = ["setuptools>=62.0", "wheel>=0.37"]
build-backend = "setuptools.build_meta"

[project]
name = "mederror"
version = "0.0.1"
description = "A project for medical error detection and analysis"
authors = [
  { name = "Jaerong Ahn", email = "jaerong.ahn@uth.tmc.edu" },
  { name = "Sunyang Fu", email = "sunyang.fu@uth.tmc.edu" },
  { name = "Qiuhao Lu", email = "qiuhao.lu@uth.tmc.edu" },
  { name = "Fang Chen", email = "fang.chen@uth.tmc.edu" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "openai>=1.0.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
    "vllm>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pre-commit",
]
all = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "python-dotenv>=1.0.0",
    "ipykernel>=6.25.0",
    "pyodbc>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]
color = false
include = '^src/.*\.py$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"